fixed overflow issue.

--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,6 @@ p{
 	font-style: normal;
 }
 
-/*a {
-	text-decoration: none;
-	color: #302d2e;
-	font-family: 'Lato', sans-serif;
-}
-
-a:visited, a:link {
-	text-decoration: none;
-}*/
-
 #home-section {
 	height: 100vh;
 	width: 100vw;
@@ -72,7 +62,7 @@ a:visited, a:link {
 	flex-wrap: wrap;
 	align-items: center; 
 	justify-content: center;
-	margin: 0;
+	max-width: 100vw;
 }
 
 .column {
@@ -118,7 +108,7 @@ a:visited, a:link {
 	background-repeat: no-repeat;
 	background-size:cover;
 	min-height: 100vh;
-	min-width: 100vw;
+	min-width: 100%;
 	position: absolute;
 	z-index: 0;
   }
@@ -129,15 +119,17 @@ a:visited, a:link {
 
 .grid {
 	display: grid;
-	/*grid-template-columns: 500px, 200px, 200px, 500px, 100px, 100px;*/
-	grid-template-columns: repeat(auto-fill, minmax(auto-fit, 500px));
+	grid-template-columns: 500px, 200px, 200px, 500px, 100px, 100px;
 	grid-template-rows: 100px, auto;
-	column-gap: 50px;
+	column-gap: 40px;
 }
 
 .arrow-section {
-	grid-column-start: 7;
-	grid-column-end: span 2;
+	grid-column-start: 5 / 6;
+	grid-row-start: 1;
+	grid-row-end: span 2;
+	align-self: center;
+	padding-left: 20px;
 }
 
 .intro-box {
@@ -148,6 +140,8 @@ a:visited, a:link {
 .edu-box {
 	grid-column-start: 2;
 	grid-column-end: span 2;
+	grid-row-start: 1;
+	grid-row-end: span 1;
 }
 
 .linkedin {
